styles.css
html {
  background-color: black;
  color: silver;
}

header { 
  display: inline-flex;
  position: absolute;
  top: 0px;
  left: 0;
  justify-content: space-around;
  background-color: grey;
  color: black;
  width: 100%;
  font-size: 1em;
}

nav {
  position: relative;
  top: 100px;
  left: 0px;
}

nav ul {
  display: flex;
  list-style-type: none;
  justify-content: start;
  font-size: 1.2em;
}

nav ul li {
  padding: 0 20px;
}

nav a {
  color: grey;
}

nav a:hover {
  color: blue;
}

footer {
  background-color: silver;
  color: black;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 40px;
}

footer h3 {
  position: relative;
  top: -8px;
  padding-left: 20px;
}

.main {
  position: relative;
  top: 100px;
}

#about-info {
  text-align: justify;
  font-size: 1.05em;
  margin-right: 5em;
  width: 85%;
  padding-left: 5%;
}

.subsect1 {
  align-self: space-between;
  margin: 0px auto;
}

.sect1 {
  display: flex;
  justify-content: space-around;
}

.sect2 {
  display: flex;
  justify-items: space-around;
  margin: 50px;
  height: 600px;
}

.img1 {
  width: 85%;
  padding-left: 5%;
  padding-top: 5%;
}

.img2 {
  width: auto;
  margin: 0 2.5em;
  height: 90%;
}

.vid {
  width: 30%;
  margin-right: 4%;
}

.educate {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

#learn1 {
  width: 80%;
  margin: 0 auto;
}

#learn2 {
  align-self: center;
  font-size: 1.3em;
  margin: 0 auto;
}

#learn3 {
  width: 80%;
  margin: 0 auto;
  margin-bottom: 40px;
}

#active {
  color: white;
  font-weight: bold;
}

.contact-sect {
  letter-spacing: 0.1em;
  line-height: 1.5em;
  display: flex;
  justify-content: space-around;
  font-weight: bold;
}

.cont1 {
  width: 70%;
  padding-left: 8em;
}

.cont2 {
  font-size: 18px;
  width: 30%;
  margin-right: 12em;
  margin-top: 2em;
}
#name {
  margin-bottom: 20px;
  background-color: darkgrey;
}

#subject {
  background-color: darkgrey;
}

::placeholder {
  color: rgb(88, 86, 86);
}

@media screen and (max-width: 1600px) {
  .sect1 {
    font-size: 14px;
  }

  .sect2 {
    height: 500px;
  }

  .educate {
    font-size: 0.8rem;
  }
}

@media screen and (max-width: 1150px) {
  .sect2 {
    height: 400px;
    margin-top: 5rem;
  }

  .educate {
    font-size: 0.7rem;
    height: 300px;
    padding-top: 5%;
  }

  .img2 {
    margin-left: -25px;
  }
}

@media screen and (max-width: 850px) {
  header {
    font-size: 0.8em;
  }

  nav {
    font-size: 0.8em;
  }

  .sect1 {
    font-size: 0.7rem;
  }

  .sect2 {
    height: 250px;
  }

  .educate {
    font-size: 0.5rem;
    padding-top: 0;
  }

  .img2 {
   margin-top: 10px;
  }
}

@media screen and (max-width: 700px) {
  header {
    font-size: 0.55em;
  }

  nav {
    font-size: 0.7em;
  }

  .sect1 {
    flex-direction: column;
    font-size: 0.8rem;
  }

  .vid {
    margin: 20px auto;
    height: 300px;
  }

  .sect2 {
    margin: 0 auto;
    flex-direction: column;
    height: 600px;
  }

  .img2 {
    margin: 20px 40px;
  }

  .educate {
    font-size: 0.65rem;
  }
}

@media screen and (max-width: 480px) {
  header {
    font-size: 0.45rem;
  }

  nav {
    font-size: 0.6em;
  }

  .sect2 {
    height: 500px;
  }
}

